# auto_version

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: build_release.yml
include/: version.h
src/: main.cpp  version.cpp  version_dynamic.cpp.in  version_static.cpp.in
